# polysolve

./: LICENSE  README.md  pyproject.toml
polysolve/: __init__.py  polysolve.py
