[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polysolve"
authors = [{name = "George", email = "george.wood@stfc.ac.uk"}]
requires-python = ">= 3.8"
readme = "README.md"
description = "la la la la la"
license = {text = "BSD-3-Clause"}

keywords = []
dependencies = ["numpy"]
classifiers = []
dynamic = ["version"]

[project.urls]
Homepage="https://github.com/XXX/polysolve"
Repository="https://github.com/XXX/polysolve.git"

[tool.setuptools.dynamic]
version = {attr = "polysolve.__version__"}
